# rusty_bet

./: Cargo.toml  mobile.toml
assets/: index.html  index.js  styles.css
src/: lib.rs
