[package]
name = "rusty-bet"
version = "0.1.0"
authors = ["Mike Gindin <gindin.mike@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rusty-bet-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-activity-name = ".MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.4.0",
    "androidx.appcompat:appcompat:1.5.0",
    "com.google.android.material:material:1.6.1",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [ "android.permission.INTERNET" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "com.example.rusty_bet"
WRY_ANDROID_LIBRARY = "rusty_bet"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/example"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[dependencies]
anyhow = "1.0.56"
log = "0.4.11"
wry = { git = "https://github.com/tauri-apps/wry" }
#wry = "0.13.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
jni = "0.19.0"
paste = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9.3"